--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# FlareSolverr for bypassing Cloudflare (SPOJ)
+# Install: docker run -d -p 8191:8191 --name=flaresolverr ghcr.io/flaresolverr/flaresolverr:latest
+FLARESOLVERR_URL=http://localhost:8191
